# name_combo

./: Cargo.toml  README.md
locales/de-DE/: main.ftl
locales/en-US/: main.ftl
src/: gender.rs  lib.rs  name.rs
