[package]
name = "name_combo"
version = "0.2.0"
edition = "2021"
authors = ["Victor von Rhein"]
description = "Representation of names."
readme = "README.md"
repository = "https://github.com/Kamduis/name_combo"
license = "MIT OR Apache-2.0"
keywords = ["name", "moniker"]
categories = ["value-formatting"]

[features]
serde = ["dep:serde"]

[dependencies]
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"], optional = true }
thiserror = "1.0.57"
